feat(tool): add admin tool to help user start AutoMQ easily (#670)
Signed-off-by: KaimingWan <kaiming.wan@automq.com>